--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
-matplotlib
-numpy
-pandas
-pytorch
-tensorflow
-seaborn
-plotly
-streamlit
+streamlit==1.49.1
+numpy==1.26.4
+pillow==11.3.0
+opencv-python==4.12.0.88
+matplotlib==3.10.6
+
+
+torch==2.8.0
+torchvision==0.23.0
+tensorflow==2.20.0
+
+
+pyembroidery==1.5.1
+svgpathtools==1.7.2
+vtracer==0.6.11
+
+
