--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 streamlit==1.49.1
-numpy==1.26.4
-pillow==11.3.0
-opencv-python==4.12.0.88
-matplotlib==3.10.6
 
+# Core
+numpy>=2.0,<2.3
+pillow>=10.0
+opencv-python>=4.12.0
+matplotlib>=3.8
 
-torch==2.8.0
-torchvision==0.23.0
-tensorflow==2.20.0
+# Deep Learning
+torch>=2.2
+torchvision>=0.17
+tensorflow>=2.16
 
-
-pyembroidery==1.5.1
-svgpathtools==1.7.2
-vtracer==0.6.11
-
+# Embroidery & SVG
+pyembroidery>=1.5
+svgpathtools>=1.7
+vtracer>=0.6
 
